fixing alignments

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -341,7 +341,13 @@ input::placeholder {
 }
 
 .max-w-7xl {
-  max-width: 68% !important;
+  max-width: 100% !important; /* Default for smaller devices */
+}
+
+@media (min-width: 1024px) { /* Adjust breakpoint as needed */
+  .max-w-7xl {
+    max-width: 68% !important;
+  }
 }
 
 
